examples_k8s/hoppscotch/hoppscotch.yaml
##  _   _                                 _       _
## | | | | ___  _ __  _ __  ___  ___ ___ | |_ ___| |__
## | |_| |/ _ \| '_ \| '_ \/ __|/ __/ _ \| __/ __| '_ \
## |  _  | (_) | |_) | |_) \__ \ (_| (_) | || (__| | | |
## |_| |_|\___/| .__/| .__/|___/\___\___/ \__\___|_| |_|
##             |_|   |_|

## Hoppscotch - Open source API development ecosystem
## https://hoppscotch.io/
## https://github.com/hoppscotch/hoppscotch + https://hub.docker.com/r/hoppscotch/hoppscotch
## https://docs.hoppscotch.io/documentation/self-host/community-edition/install-and-build#using-the-aio-container
## https://github.com/hoppscotch/hoppscotch/blob/main/.env.example

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoppscotch
  namespace: hoppscotch
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: hoppscotch
  template:
    metadata:
      labels:
        app: hoppscotch
    spec:
      #imagePullSecrets:
      #- name: regcred
      restartPolicy: Always
      containers:
      - name: hoppscotch
        image: hoppscotch/hoppscotch:latest  # 2024.10.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: hoppscotch
          protocol: TCP
        #- containerPort: 8080
        #  name: node
        #  protocol: TCP
        readinessProbe:
          exec:
            command: ["/bin/sh", "-c", "curl --fail --insecure http://localhost:8080/ping"]
          #tcpSocket:
          #  port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "curl --fail --insecure http://localhost:8080/ping"]
          #tcpSocket:
          #  port: 8080
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        # IMPORTANT: USE FOR FIRST RUN ! (to create/update database tables)
        #command: [ "/bin/sh", "-c", "--" ]
        #args: [ "pnpx prisma migrate deploy" ]
        ##args: [ "while true; do sleep 60; done;" ]  # then execute in pod: "pnpx prisma migrate deploy"

---

apiVersion: v1
kind: Service
metadata:
  name: hoppscotch
  namespace: hoppscotch
  labels:
    app: hoppscotch
spec:
  type: ClusterIP
  ports:
  - name: "hoppscotch"
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: hoppscotch

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoppscotch
  namespace: hoppscotch
  labels:
    app: hoppscotch
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600s"
    ## https://cert-manager.io/docs/
    #cert-manager.io/cluster-issuer: ingress-tls-secret
    #cert-manager.io/acme-challenge-type: http01
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#enable-cors
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    #nginx.ingress.kubernetes.io/cors-allow-origin: "https://hoppscotch.example.com, https://*.example.com, https://*.example.net"
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/#allow-snippet-annotations
    # https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/advanced-configuration-with-snippets/
    # https://github.com/kubernetes/ingress-nginx/issues/3746#issuecomment-676357961
    nginx.org/location-snippets: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection upgrade;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hoppscotch.example.com
    secretName: ingress-tls-secret
  rules:
  - host: hoppscotch.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name:  hoppscotch
            port:
              #name: hoppscotch
              number: 80
