examples_k8s/hoppscotch/proxyscotch.yaml
##  ____                                    _       _
## |  _ \ _ __ _____  ___   _ ___  ___ ___ | |_ ___| |__
## | |_) | '__/ _ \ \/ / | | / __|/ __/ _ \| __/ __| '_ \
## |  __/| | | (_) >  <| |_| \__ \ (_| (_) | || (__| | | |
## |_|   |_|  \___/_/\_\\__, |___/\___\___/ \__\___|_| |_|
##                      |___/

## Proxyscotch - A simple proxy server created for Hoppscotch.
## https://github.com/hoppscotch/proxyscotch
## https://github.com/Tob1as/docker-tools

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxyscotch
  namespace: hoppscotch
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: proxyscotch
  template:
    metadata:
      labels:
        app: proxyscotch
    spec:
      #imagePullSecrets:
      #  - name: regcred
      restartPolicy: Always
      containers:
      - name: proxyscotch
        image: tobi312/tools:proxyscotch  # v0.1.1  (or: hoppscotch/proxyscotch:latest)
        imagePullPolicy: Always
        ports:
        - containerPort: 9159
          name: proxyscotch
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 9159
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 9159
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        #args: [ "-host", "0.0.0.0:9159", "-token", "my-token-passw0rd" ]

---

apiVersion: v1
kind: Service
metadata:
  name: proxyscotch
  namespace: hoppscotch
  labels:
    app: proxyscotch
spec:
  type: ClusterIP
  ports:
  - name: "proxyscotch"
    protocol: TCP
    port: 9159
    targetPort: 9159
  selector:
    app: proxyscotch

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxyscotch
  namespace: hoppscotch
  labels:
    app: proxyscotch
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120s"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hoppscotch.example.com
    secretName: ingress-tls-secret
  rules:
  - host: hoppscotch.example.com
    http:
      paths:
      - path: /proxy
        pathType: ImplementationSpecific  # ImplementationSpecific or Prefix
        backend:
          service:
            name:  proxyscotch
            port:
              #name: proxyscotch
              number: 9159
